# grub2-editor

./: CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  README  README.md  README.old  config.h.cmake  kcm-grub2.pot
cmake/modules/: FindHD.cmake  FindImageMagick.cmake  FindQApt.cmake  GRUBPaths.cmake
other/: CMakeLists.txt  kcm-grub2-languages  kcm_grub2.desktop
po/: CMakeLists.txt  kcm-grub2.pot
po/ca/: CMakeLists.txt  kcm-grub2.po
po/ca@valencia/: CMakeLists.txt  kcm-grub2.po
po/cs/: CMakeLists.txt  kcm-grub2.po
po/da/: CMakeLists.txt  kcm-grub2.po
po/de/: CMakeLists.txt  kcm-grub2.po
po/el/: CMakeLists.txt  kcm-grub2.po
po/es/: CMakeLists.txt  kcm-grub2.po
po/et/: CMakeLists.txt  kcm-grub2.po
po/fi/: CMakeLists.txt  kcm-grub2.po
po/fr/: CMakeLists.txt  kcm-grub2.po
po/ga/: CMakeLists.txt  kcm-grub2.po
po/gl/: CMakeLists.txt  kcm-grub2.po
po/hu/: CMakeLists.txt  kcm-grub2.po
po/it/: CMakeLists.txt  kcm-grub2.po
po/lt/: CMakeLists.txt  kcm-grub2.po
po/nb/: CMakeLists.txt  kcm-grub2.po
po/nl/: CMakeLists.txt  kcm-grub2.po
po/pa/: CMakeLists.txt  kcm-grub2.po
po/pl/: CMakeLists.txt  kcm-grub2.po
po/pt/: CMakeLists.txt  kcm-grub2.po
po/pt_BR/: CMakeLists.txt  kcm-grub2.po
po/ro/: CMakeLists.txt  kcm-grub2.po
po/ru/: CMakeLists.txt  kcm-grub2.po
po/sk/: CMakeLists.txt  kcm-grub2.po
po/sl/: CMakeLists.txt  kcm-grub2.po
po/sv/: CMakeLists.txt  kcm-grub2.po
po/tr/: CMakeLists.txt  kcm-grub2.po
po/uk/: CMakeLists.txt  kcm-grub2.po
po/zh_CN/: CMakeLists.txt  kcm-grub2.po
po/zh_TW/: CMakeLists.txt  kcm-grub2.po
src/: CMakeLists.txt  common.cpp  common.h  convertDlg.cpp  convertDlg.h  entry.cpp  entry.h  groupDlg.cpp  groupDlg.h  installDlg.cpp  installDlg.h  kcm_grub2.cpp  kcm_grub2.h  qPkBackend.cpp  qPkBackend.h  qapt2Backend.cpp  qapt2Backend.h  qaptBackend.cpp  qaptBackend.h  removeDlg.cpp  removeDlg.h  userDlg.cpp  userDlg.h
src/helper/: CMakeLists.txt  grub_rmecho.sh  helper.cpp  helper.h  kcmgrub2.actions
src/widgets/: regexpinputdialog.cpp  regexpinputdialog.h
ui/: convertDlg.ui  groupDlg.ui  installDlg.ui  kcm_grub2.ui  removeDlg.ui  userDlg.ui
